<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasks"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Todo"
                    android:textSize="18sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/add_tasks"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:text="@string/add_new_note"
                    android:drawableEnd="@drawable/ic_baseline_add_24"
                    android:drawableTint="@color/white"
                    android:padding="10dp"
                    android:textColor="@color/white"/>

            </LinearLayout>


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_task"
                    />
            </androidx.core.widget.NestedScrollView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_subjects"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Subjects"
                    android:textSize="18sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/see_all"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/see_all"
                    android:padding="12dp"
                    android:gravity="end"
                    android:textColor="@color/secondary"/>

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>



</FrameLayout>